--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px;
     background-color:bisque;
-    font-family:fantasy;
+    font-family: 'JetBrains Mono', monospace;
 }
 
 /* Navigation Bar */
@@ -44,7 +44,7 @@ body {
     margin: 5%;
     margin-left: -15px;
     margin-right: -15px;
-    margin-top: -21px;
+    margin-top: -5px;
     margin-bottom: -75px;
 }
 
@@ -52,7 +52,6 @@ body {
 /* Text Container */
 #text {
     display: flex;
-    /* background-color: white; */
     background-image: linear-gradient(white, gray);
 }
 
@@ -63,21 +62,29 @@ body {
 
     border-style: solid;
     border-color: black;
+    padding: 15px;
 
     margin: 5%;
     width: 60%;
     text-align: center;
+    
 }
 
 .listing {
 
-    margin: 20px;
+    margin:20px;
 
     display: flex;
 }
+
+h2 {
+    font-size: 30px;
+}
+
 .listingText {
     display: flex;
     flex-direction: column;
+    padding: 15px;
 }
 
 /* Side Text Box */
@@ -97,7 +104,7 @@ body {
     display: flex;
     flex-direction: column;
 
-    border-style: solid;
+    border-style: none;
     border-color: black;
     margin: 10px;
     
@@ -145,23 +152,20 @@ a {
 }
 
 .transitionH {
-    background-color: white;
+    background-image: linear-gradient(to right,white, gray);
 }
 
 #purple2 {
-    background-color: purple;
     margin-left: -35px;
     margin-right: -20px;
 }
 
 #red {
-    background-color: red;
     margin-left: -35px;
     margin-right: -20px;
 }
 
 #blue {
-    background-color: blue;
     margin-left: -35px;
     margin-right: -20px;
 }
@@ -173,19 +177,16 @@ a {
 }
 
 #purple2 {
-    background-color: purple;
     margin-left: -35px;
     margin-right: -20px;
 }
 
 #red {
-    background-color: red;
     margin-left: -35px;
     margin-right: -20px;
 }
 
 #blue {
-    background-color: blue;
     margin-left: -35px;
     margin-right: -20px;
 }
@@ -204,28 +205,24 @@ a {
 
 #college {
     margin: 45px;
-    background-color: rgb(65, 18, 140);
-    padding: 15px;
+    padding: 0px;
 }
 
 #networking {
-    background-color: crimson;
-    padding: 5px;
+    padding: 0px;
     width: 300px;
     margin-left: 45px;
 }
 
 #social {
-   background-color:dodgerblue;
    width: 290px;
    margin-left: 45px;
-   padding: 10px;
+   padding: 0px;
 }
 
 #experience {
-    background-color: bisque;
     width: 290px;
-    padding: 10px;
+    padding: 0px;
     margin-left: 45px;
 }
 
@@ -257,7 +254,37 @@ a {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+p {
+    font-weight: bold;
+    font-size: 25px;
+}
+
+
+
 .listings {
     color: cyan;
     text-decoration:underline;
+}
+
+#purple2 a {
+    color: black;
+}
+
+#purple2 a:hover {
+    color: cyan;
+    text-decoration: underline;
+    opacity: 0.6;
+}
+
+.github {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    height: 200px;
+}
+
+h2, #abtTitle{
+    display: flex;
+    justify-content: center;
 }
